@@ -2,6 +2,8 @@ package com.lecture.enrollment.service;
 
 import com.lecture.enrollment.dto.EnrollmentDto;
 import com.lecture.enrollment.entity.Enrollment;
+import com.lecture.enrollment.exception.EnrollmentException;
+import com.lecture.enrollment.exception.ErrorCode;
 import com.lecture.enrollment.kafka.EnrollmentKafkaProducer;
 import com.lecture.enrollment.kafka.KafkaEvent;
 import com.lecture.enrollment.repository.EnrollmentRepository;
@@ -10,10 +12,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -23,48 +22,40 @@ public class EnrollmentService {
 
     private final EnrollmentRepository enrollmentRepository;
     private final CourseServiceClient courseServiceClient;
-    private final PaymentServiceClient paymentServiceClient;
-    private final EnrollmentKafkaProducer kafkaProducer;
+    private final UserAuthorizationClient userAuthorizationClient;
+    private final CompanyEntitlementClient companyEntitlementClient;
+    private final EnrollmentKafkaProducer enrollmentKafkaProducer;
     private final EnrollmentWriteService enrollmentWriteService;
 
-    /**
-     * 수강신청 전체 흐름
-     * 1. 강의 존재 확인
-     * 2. 중복 수강 확인
-     * 3. Enrollment 생성 및 즉시 커밋 (PENDING)
-     * 4. 결제 요청
-     */
-    public EnrollmentDto.EnrollmentResponse enroll(Long userId, Long courseId) {
-        if (!courseServiceClient.existsCourse(courseId)) {
-            throw new IllegalArgumentException("존재하지 않는 강의입니다: " + courseId);
+    @Transactional
+    public EnrollmentDto.EnrollResponse enroll(Long userId, Long courseId) {
+        UserAuthorizationClient.AuthorizationContext authorization =
+                userAuthorizationClient.getAuthorizationContext(userId);
+
+        if (!authorization.isActiveEmployee()) {
+            throw new EnrollmentException(ErrorCode.FORBIDDEN);
         }
+
+        CompanyEntitlementClient.Entitlement entitlement =
+                companyEntitlementClient.getEntitlement(authorization.getCompanyId());
+
+        if (!entitlement.isActive()) {
+            throw new EnrollmentException(ErrorCode.SUBSCRIPTION_INACTIVE);
+        }
+
+        courseServiceClient.validateEnrollable(courseId);
 
         if (enrollmentRepository.existsByUserIdAndCourseId(userId, courseId)) {
-            throw new IllegalArgumentException("이미 수강신청한 강의입니다");
+            throw new EnrollmentException(ErrorCode.DUPLICATE_ENROLLMENT);
         }
 
-        Enrollment enrollment = enrollmentWriteService.createPendingEnrollment(userId, courseId);
+        Enrollment enrollment = enrollmentWriteService.createEnrollment(
+                authorization.getCompanyId(),
+                userId,
+                courseId
+        );
 
-        paymentServiceClient.requestPayment(userId, courseId, BigDecimal.valueOf(99000));
-
-        log.info("[EnrollmentService] 수강신청 완료 (결제 대기) - enrollmentId: {}", enrollment.getId());
-        return EnrollmentDto.EnrollmentResponse.from(enrollment);
-    }
-
-    /**
-     * 수강 활성화
-     */
-    @Transactional
-    public void activateEnrollment(Long userId, Long courseId) {
-        Enrollment enrollment = enrollmentRepository.findByUserIdAndCourseId(userId, courseId)
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "수강 정보를 찾을 수 없습니다 - userId: " + userId + ", courseId: " + courseId));
-
-        enrollment.activate();
-
-        courseServiceClient.increaseEnrollmentCount(courseId);
-
-        kafkaProducer.publishEnrollmentCompleted(
+        enrollmentKafkaProducer.publishEnrollmentCompleted(
                 KafkaEvent.EnrollmentCompletedEvent.builder()
                         .enrollmentId(enrollment.getId())
                         .userId(userId)
@@ -72,103 +63,34 @@ public class EnrollmentService {
                         .build()
         );
 
-        log.info("[EnrollmentService] 수강 활성화 완료 - enrollmentId: {}", enrollment.getId());
+        log.info("[EnrollmentService] 수강신청 완료 - enrollmentId: {}", enrollment.getId());
+        return EnrollmentDto.EnrollResponse.from(enrollment);
     }
 
-    /**
-     * 사용자 수강 목록 조회
-     * - course-service에서 강의 상세 정보를 붙여서 반환
-     */
-    public List<EnrollmentDto.EnrollmentResponse> getEnrollmentsByUser(Long userId) {
-        List<Enrollment> enrollments = enrollmentRepository.findByUserId(userId);
-
-        return enrollments.stream()
-                .map(enrollment -> {
-                    Map<String, Object> courseInfo = courseServiceClient.getCourse(enrollment.getCourseId());
-
-                    EnrollmentDto.CourseSummary courseSummary = EnrollmentDto.CourseSummary.builder()
-                            .id(toLong(courseInfo.get("id")))
-                            .title((String) courseInfo.get("title"))
-                            .description((String) courseInfo.get("description"))
-                            .category(normalizeCategory((String) courseInfo.get("category")))
-                            .price(toInteger(courseInfo.get("price")))
-                            .thumbnail((String) courseInfo.get("thumbnail"))
-                            .instructorName(
-                                    firstNonNull(
-                                            (String) courseInfo.get("instructorName"),
-                                            (String) courseInfo.get("teacherName"),
-                                            (String) courseInfo.get("instructor_name")
-                                    )
-                            )
-                            .enrollmentCount(toInteger(
-                                    firstNonNullObject(
-                                            courseInfo.get("enrollmentCount"),
-                                            courseInfo.get("enrollment_count")
-                                    )
-                            ))
-                            .build();
-
-                    return EnrollmentDto.EnrollmentResponse.from(enrollment, courseSummary);
-                })
-                .collect(Collectors.toList());
+    public List<EnrollmentDto.EnrollmentSummaryResponse> getEnrollmentsByUser(Long userId) {
+        return enrollmentRepository.findByUserIdOrderByEnrolledAtDesc(userId)
+                .stream()
+                .map(EnrollmentDto.EnrollmentSummaryResponse::from)
+                .toList();
     }
 
-    /**
-     * 수강 이력 조회 - 추천 서비스용
-     */
     public EnrollmentDto.EnrollmentHistoryResponse getEnrollmentHistory(Long userId) {
         List<Long> activeCourseIds = enrollmentRepository
-                .findByUserIdAndStatus(userId, Enrollment.Status.ACTIVE)
+                .findByUserIdAndStatusIn(
+                        userId,
+                        List.of(
+                                Enrollment.Status.ENROLLED,
+                                Enrollment.Status.LEARNING,
+                                Enrollment.Status.COMPLETED
+                        )
+                )
                 .stream()
                 .map(Enrollment::getCourseId)
-                .collect(Collectors.toList());
+                .toList();
 
         return EnrollmentDto.EnrollmentHistoryResponse.builder()
                 .userId(userId)
                 .activeCourseIds(activeCourseIds)
                 .build();
-    }
-
-    private String normalizeCategory(String category) {
-        if (category == null) return null;
-
-        return switch (category) {
-            case "BACKEND" -> "백엔드";
-            case "FRONTEND" -> "프론트엔드";
-            case "DEVOPS" -> "DevOps";
-            case "DATA" -> "데이터";
-            case "AI" -> "AI";
-            default -> category;
-        };
-    }
-
-    private Long toLong(Object value) {
-        if (value == null) return null;
-        if (value instanceof Number number) return number.longValue();
-        return Long.parseLong(value.toString());
-    }
-
-    private Integer toInteger(Object value) {
-        if (value == null) return null;
-        if (value instanceof Number number) return number.intValue();
-        return Integer.parseInt(value.toString());
-    }
-
-    private String firstNonNull(String... values) {
-        for (String value : values) {
-            if (value != null && !value.isBlank()) {
-                return value;
-            }
-        }
-        return null;
-    }
-
-    private Object firstNonNullObject(Object... values) {
-        for (Object value : values) {
-            if (value != null) {
-                return value;
-            }
-        }
-        return null;
     }
 }
